# UQAC_projet_prog_mobile_API

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml
src/: main.rs
src/api/: firebase_api.rs  login_api.rs  lookup_api.rs  mod.rs  register_api.rs  shopping_api.rs  user_api.rs
src/models/: jwt_model.rs  mod.rs  response_model.rs  shopping_model.rs  status_model.rs  user_model.rs
src/repository/: mongodb_repo.rs
src/utils/: data_check.rs  jwt_utils.rs  mod.rs  request_guard.rs
