[package]
name = "uqac_projet_prog_mobile_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
regex = "1.10.2"
pwhash = "1.0.0"
serde_json = "1.0.88"
chrono = "0.4.23"
jsonwebtoken = "9.1.0"
tokio = { version = "1.34.0", features = ["full"] }

[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = ["sync"]
